fixed scrollbar issue for hourly data

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -61,7 +61,16 @@ span {
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 30px;
-  /* overflow: hidden; */
+  overflow-y: scroll;
+}
+
+.main::-webkit-scrollbar {
+  display: none; /* Safari and Chrome browsers */
+}
+
+.main {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* mozilla */
 }
 
 .user-position {
@@ -141,7 +150,7 @@ span {
 }
 
 .weather-data-title {
-  font-size: 0.8rem;
+  font-size: 1rem;
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: 1px;
